<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_simple"
        android:layout_below="@+id/linearLayout"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="center"
        app:tabTextColor="@color/white"
        app:tabIndicatorHeight="40dp"
        app:tabIndicatorColor="@color/pink_light"
        app:tabIndicator="@drawable/tab_indicator"

        />
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:contentDescription="@string/music_files_of_the_music_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tab_layout"
        />
    <RelativeLayout
        android:id="@+id/card_bottom_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink_bottom"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        >

        <ImageView
            android:id="@+id/bottom_album_art"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/princess_transparent2"
            android:scaleType="centerCrop"
            android:background="@color/pink_bottom"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:id="@+id/skip_next_bottom"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/skip_next"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/this_is_skip_to_next_song_button"
            />
        <ImageView
            android:id="@+id/skip_prev_bottom"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/skip_previous"
            android:layout_toStartOf="@+id/play_pause_mini_player"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/this_is_skip_to_previous_song_button"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause_mini_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/skip_next_bottom"
            android:backgroundTint="#FAF8F8"
            android:background="@color/pink_dark"
            android:src="@drawable/play"
            android:contentDescription="@string/this_is_play_pause_button"/>
        <TextView
            android:id="@+id/song_name_mini_player"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/skip_prev_bottom"
            android:maxLines="1"
            android:text="@string/song_name"
            android:layout_marginEnd="3dp"
            android:layout_toEndOf="@+id/bottom_album_art"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/song_artist_mini_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_name_mini_player"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/skip_prev_bottom"
            android:maxLines="1"
            android:layout_toEndOf="@+id/bottom_album_art"
            android:text="@string/artist_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:background="@color/pink_super_light">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:contentDescription="@string/this_is_the_advertising_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-5450818110715757/2527699649">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>