<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink_super"
    tools:context=".SingerDetailsActivity">
    <ImageView
        android:id="@+id/singerPhoto"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/princess_transparent2"
        android:scaleType="centerCrop" />
    <ImageView
        android:id="@+id/singerGradient"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/gradient_bg"
        android:scaleType="centerCrop" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_singer_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/singerPhoto"/>
    <RelativeLayout
        android:id="@+id/card_bottom_player_singer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/pink_bottom"
        >

        <ImageView
            android:id="@+id/bottom_singer_art"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/princess_transparent2"
            android:scaleType="centerCrop"
            android:background="@color/pink_bottom"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:id="@+id/skip_next_bottom_singer"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/skip_next"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/this_is_skip_to_next_song_button"
            />
        <ImageView
            android:id="@+id/skip_prev_bottom_singer"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/skip_previous"
            android:layout_toStartOf="@+id/play_pause_mini_player_singer"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:contentDescription="@string/this_is_skip_to_previous_song_button"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause_mini_player_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/skip_next_bottom_singer"
            android:backgroundTint="#FAF8F8"
            android:src="@drawable/play" />
        <TextView
            android:id="@+id/song_name_mini_player_singer"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/skip_prev_bottom_singer"
            android:maxLines="1"
            android:text="@string/song_name"
            android:layout_marginEnd="3dp"
            android:layout_toEndOf="@+id/bottom_singer_art"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/song_artist_mini_player_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_name_mini_player_singer"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/skip_prev_bottom_singer"
            android:maxLines="1"
            android:layout_toEndOf="@+id/bottom_singer_art"
            android:text="@string/artist_name"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>