<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
    android:background="@drawable/pink_light"
    >

    <RelativeLayout
        android:id="@+id/layout_top_btm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/gradient_bg">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/chevron_left" />

        <TextView
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/menu_btn"
            android:layout_toEndOf="@+id/back_btn"
            android:gravity="center_horizontal"
            android:text="@string/now_playing"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/menu" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/layout_top_btm">
        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/princess_transparent2"
            android:scaleType="centerCrop"/>
        <ImageView
            android:id="@+id/imageViewGradient"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/gradient_bg"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_song_name"
        android:layout_below="@+id/card"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <TextView
        android:id="@+id/song_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_is_artist_name"
        android:layout_below="@+id/song_name"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>
    <RelativeLayout
        android:id="@+id/relative_layout_for_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/gradient_bg">
        <ImageView
            android:id="@+id/shuffle_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/shuffle"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="32dp"/>

        <ImageView
            android:id="@+id/prev_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/skip_previous"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/play_pause"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F6F1F1"
            android:src="@drawable/play"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:clickable="true" />

        <ImageView
            android:id="@+id/next_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/skip_next"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play_pause"
            android:layout_marginStart="16dp"/>

        <ImageView
            android:id="@+id/repeat_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/repeat"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="32dp" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/seek_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/relative_layout_for_bottom"
        android:layout_marginBottom="15dp">
        <TextView
            android:id="@+id/duration_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1:28"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true" />
        <TextView
            android:id="@+id/duration_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2:28"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#F3EDED" />

    </RelativeLayout>

</RelativeLayout>